<?xml version="1.0"?>
<package>
  <name>robotcar_to_rosbag</name>
  <version>0.0.0</version>
  <description>Markers Depth Estimator</description>

  <maintainer email="siddharthjha@outlook.com">debian</maintainer>

  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cv_bridge</build_depend>

 
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
